fix spacing

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body,html
 #title ul 
 {
     margin:0;
-    padding:11em;
+    padding:5em;
     list-style-type: none;
     vertical-align: middle;
 
